--- a/viral-coefficient.html
+++ b/viral-coefficient.html
@@ -20,6 +20,12 @@
         .input-card:focus-within { border-color: #ec4899; box-shadow: 0 0 0 4px rgba(236,72,153,0.1); }
         .growth-animate { transition: all 0.5s ease-out; }
     </style>
+<!-- Load AdSense from shared file -->
+<script>
+  fetch('/head-ads.html')
+    .then(r => r.text())
+    .then(html => document.head.innerHTML += html);
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
@@ -219,3 +225,4 @@
     </script>
 </body>
 </html>
+
