--- a/viral-coefficient.html
+++ b/viral-coefficient.html
@@ -20,11 +20,8 @@
         .input-card:focus-within { border-color: #ec4899; box-shadow: 0 0 0 4px rgba(236,72,153,0.1); }
         .growth-animate { transition: all 0.5s ease-out; }
     </style>
-<!-- Load AdSense from shared file -->
-<script>
-  fetch('/head-ads.html')
-    .then(r => r.text())
-    .then(html => document.head.innerHTML += html);
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3979959488510560"
+     crossorigin="anonymous">
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
@@ -225,4 +222,5 @@
     </script>
 </body>
 </html>
+
 
